Restrict user profile lookup
